# pokemon-product-monitor

./: .dockerignore  .gitignore  README.md  install_dependencies.bat  requirements-dev.in  requirements.txt  start_backend.bat  start_backend_hidden.bat  start_dashboard.bat  start_dashboard_hidden.vbs  stop_dashboard.bat
superparser_modular/: .env.example  README.md  check_db.py  filters.example.json  pyproject.toml
superparser_modular/src/pokemon_parser/: config.py  dreamland_availability.py  models.py
superparser_modular/src/pokemon_parser/api/: __init__.py  app.py  schemas.py
superparser_modular/src/pokemon_parser/cli/: main.py
superparser_modular/src/pokemon_parser/engine/: access_control.py  antiban.py  antiban_policies.py  heartbeat.py  startup.py  (+5 more)
superparser_modular/tests/: test_access_control.py  test_codeql_hardening.py  test_config.py  test_dashboard_clean_slate.py  test_debug_logging.py  test_dreamland_parser.py  test_dreamland_worker.py  test_filter_import.py  test_filters.py  test_health.py  test_mediamarkt_hot_path_observability.py  test_mediamarkt_response_classification.py  test_migration_observability.py  test_pipeline_decision_metrics.py  test_pocketgames_purchase_safety.py  test_release_guard.py  test_selenium_lifecycle.py  test_settings_backup.py  test_startup_bootstrap.py  test_storage_sqlite.py  test_text.py  test_watchlist_heartbeat.py  test_watchlist_priority.py  test_worker_queue_timing_bol.py
superparser_modular/tests/fixtures/: mediamarkt_pdp_available.html  mediamarkt_pdp_soon_available.html  mediamarkt_pdp_synthetic_unavailable.html
(+73 files in other folders)
